--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,19 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.card-min-info{
+display: flex;
+align-items: center;
+}
+
+.title-card-min{
+   font-size: 20px;
+   font-weight: 500;
+   margin-left: 10px;
+}
+
+/* .text-card{
+   font-size: 20px;
+   font-weight: 300;
+} */
